# compass-ros2

./: README.md
compass_conversions/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml
compass_conversions/include/compass_conversions/: compass_converter.h  compass_transformer.h  message_filter.h  message_filter_serialized_msg_BAD.h  mf_og.h  tf2_compass_msgs.h  topic_names.h
compass_conversions/launch/: compass_transformer_launch.xml
compass_conversions/nodelets/: blablabalbbalba.cpp  compass_transformer.cpp
compass_conversions/src/: compass_converter.cpp  message_filter.cpp  message_filter_serialized_msg_BAD.cpp  mf_og.cpp  tf2_compass_msgs.cpp  topic_names.cpp
compass_conversions/test/: test_compass_converter.cpp  test_compass_transformer_nodelet.cpp  test_compass_transformer_nodelet.test  test_message_filter.cpp  test_tf2_compass_msgs.cpp  test_topic_names.cpp
compass_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
compass_interfaces/msg/: Azimuth.msg
compass_utils/: CMakeLists.txt  package.xml
compass_utils/include/compass_utils/: interruptible_buffer.h  interruptible_sleep_interface.h  rate_limiter.h  semaphore.hpp  string_utils.hpp  tf2_utils.hpp  time_utils.hpp
compass_utils/src/: interruptible_buffer.cpp  interruptible_sleep_interface.cpp  rate_limiter.cpp  semaphore.cpp  string_utils.cpp  tf2_utils.cpp  time_utils.cpp
compass_utils/test/: test_compass_utils.cpp  test_rate_limiter.cpp  test_string_utils.cpp  test_tf2_utils.cpp  test_time_utils.cpp
cpp_launch_example/: CMakeLists.txt  package.xml
cpp_launch_example/include/cpp_launch_example/: magnetometer_bias_remover_nodelet.hpp
cpp_launch_example/src/: magnetometer_bias_remover_nodelet.cpp
magnetic_model/: CHANGELOG.rst  CMakeLists.txt  CMakeLists_old.txt  README.md  package.xml
magnetic_model/include/magnetic_model/: magnetic_model.h  magnetic_model_manager.h
magnetic_model/src/: magnetic_model.cpp  magnetic_model_manager.cpp
magnetic_model/test/: test_magnetic_model.cpp
magnetometer_compass/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml  rosdoc.yaml
magnetometer_compass/include/magnetometer_compass/: magnetometer_compass.h  magnetometer_compass_nodelet.hpp  tf2_sensor_msgs.h  visualize_azimuth_nodelet.hpp
magnetometer_compass/launch/: compass.launch  compass_launch.xml  compass_launch_bag.xml  compass_launch_robot.xml  compass_launch_sim.xml
magnetometer_compass/nodelets/: magnetometer_compass_nodelet copy.cpp  magnetometer_compass_nodelet.cpp  visualize_azimuth_nodelet.cpp
magnetometer_compass/src/: magnetometer_compass.cpp
magnetometer_compass/test/: test_magnetometer_compass.cpp  test_magnetometer_compass_nodelet copy.cpp  test_magnetometer_compass_nodelet.cpp  test_magnetometer_compass_nodelet.test  test_visualize_azimuth_nodelet.cpp  test_visualize_azimuth_nodelet.test
magnetometer_pipeline/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml
magnetometer_pipeline/include/magnetometer_pipeline/: bias_remover.h  magnetometer_bias_remover_nodelet.hpp  message_filter.h
magnetometer_pipeline/launch/: magnetometer_bias_remover_launch.xml  magnetometer_launch.xml  magnetometer_proc.launch  magnetometer_proc_launch.xml  magnetometer_proc_launch_bag.xml  magnetometer_proc_launch_robot.xml  magnetometer_proc_launch_sim.xml
magnetometer_pipeline/nodelets/: magnetometer_bias_remover_nodelet.cpp
magnetometer_pipeline/nodes/: magnetometer_bias_observer  magnetometer_bias_observer.py
magnetometer_pipeline/src/: bias_remover.cpp  message_filter.cpp
magnetometer_pipeline/test/: test_bias_remover.cpp  test_bias_remover_nodelet.cpp  test_bias_remover_nodelet.test  test_bias_remover_nodelet_new.cpp  test_message_filter.cpp
test/: CMakeLists.txt  package.xml
test/include/test/: test.hpp
test/src/: test.cpp
test/test/: tutorial_test.cpp
