<?xml version="1.0"?>
<!-- SPDX-License-Identifier: BSD-3-Clause -->
<!-- SPDX-FileCopyrightText: Czech Technical University in Prague -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compass_utils</name>
  <version>2.0.3</version>
  <description>Utils related to compass</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  
  <url type="repository">https://github.com/ctu-vras/compass</url>
  <url type="bugtracker">https://github.com/ctu-vras/compass/issues</url>
  <url type="website">https://wiki.ros.org/compass_utils</url>

  <license file="LICENSE">BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>compass_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tl-expected</depend>

  <!--build_depend>cras_cpp_common</build_depend-->
  <!--build_depend>message_generation</build_depend-->

  <build_export_depend>message_runtime</build_export_depend>

  <!--exec_depend>cras_cpp_common</exec_depend-->
  <exec_depend>message_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
