<?xml version="1.0"?>
<!-- SPDX-License-Identifier: BSD-3-Clause -->
<!-- SPDX-FileCopyrightText: Czech Technical University in Prague -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compass_utils</name>
  <version>2.0.3</version>
  <description>Utils related to compass</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  
  <url type="repository">https://github.com/ctu-vras/compass</url>
  <url type="bugtracker">https://github.com/ctu-vras/compass/issues</url>
  <url type="website">https://wiki.ros.org/compass_utils</url>

  <license file="LICENSE">BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libexpected-dev</build_depend>
  <build_export_depend>libexpected-dev</build_export_depend>
  
  <depend>rclcpp</depend>
  <depend>compass_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
